Added cross-env and now supporting setting the port dynamically

--- a/3._Car_API/package.json
+++ b/3._Car_API/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "cross-env": "^7.0.2",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start-dev": "cross-env PORT=8080 nodemon app.js",
+    "start-prod": "node app.js"
   }
 }
